// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can handle affiliated keywords 1`] = `
Object {
  "children": Array [
    Object {
      "attributes": Object {
        "name": "code_block",
      },
      "name": "SRC",
      "params": Array [
        "javascript",
      ],
      "parent": [Circular],
      "position": Object {
        "end": Object {
          "column": 10,
          "line": 4,
          "offset": 79,
        },
        "start": Object {
          "column": 1,
          "line": 2,
          "offset": 19,
        },
      },
      "type": "block",
      "value": "
console.log('hello world.')",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 10,
      "line": 4,
      "offset": 79,
    },
    "start": Object {
      "column": 1,
      "line": 2,
      "offset": 19,
    },
  },
  "properties": Object {},
  "type": "document",
}
`;

exports[`can handle html export 1`] = `
Object {
  "children": Array [
    Object {
      "attributes": Object {},
      "name": "EXPORT",
      "params": Array [
        "html",
      ],
      "parent": [Circular],
      "position": Object {
        "end": Object {
          "column": 13,
          "line": 4,
          "offset": 61,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "block",
      "value": "
<h1>hello</h1>
<p>world!</p>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 13,
      "line": 4,
      "offset": 61,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "properties": Object {},
  "type": "document",
}
`;

exports[`can handle html export 2`] = `
Object {
  "children": Array [
    Object {
      "parent": [Circular],
      "type": "html",
      "value": "<h1>Hello</h1>",
    },
  ],
  "properties": Object {},
  "type": "document",
}
`;

exports[`can handle invalid affiliated keywords 1`] = `
Object {
  "children": Array [
    Object {
      "attributes": Object {
        "name": "code_block",
      },
      "name": "SRC",
      "params": Array [
        "javascript",
      ],
      "parent": [Circular],
      "position": Object {
        "end": Object {
          "column": 10,
          "line": 5,
          "offset": 80,
        },
        "start": Object {
          "column": 1,
          "line": 3,
          "offset": 20,
        },
      },
      "type": "block",
      "value": "
console.log('hello world.')",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 10,
      "line": 5,
      "offset": 80,
    },
    "start": Object {
      "column": 1,
      "line": 3,
      "offset": 20,
    },
  },
  "properties": Object {},
  "type": "document",
}
`;

exports[`can handle invalid affiliated keywords 2`] = `
Object {
  "children": Array [
    Object {
      "attributes": Object {},
      "name": "SRC",
      "params": Array [
        "javascript",
      ],
      "parent": [Circular],
      "position": Object {
        "end": Object {
          "column": 10,
          "line": 4,
          "offset": 78,
        },
        "start": Object {
          "column": 1,
          "line": 2,
          "offset": 18,
        },
      },
      "type": "block",
      "value": "
console.log('hello world.')",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 10,
      "line": 4,
      "offset": 78,
    },
    "start": Object {
      "column": 1,
      "line": 2,
      "offset": 18,
    },
  },
  "properties": Object {
    "nop": "code_block",
  },
  "type": "document",
}
`;

exports[`should handle broken blocks (missing begin) 1`] = `
Object {
  "children": Array [
    Object {
      "attributes": Object {},
      "children": Array [
        Object {
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 21,
              "line": 1,
              "offset": 20,
            },
            "start": Object {
              "column": 1,
              "line": 1,
            },
          },
          "type": "text.plain",
          "value": "console.log('hello')",
        },
        Object {
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 1,
              "line": 2,
              "offset": 21,
            },
            "start": Object {
              "column": 21,
              "line": 1,
              "offset": 20,
            },
          },
          "type": "text.plain",
          "value": " ",
        },
        Object {
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 21,
              "line": 2,
              "offset": 41,
            },
            "start": Object {
              "column": 1,
              "line": 2,
              "offset": 21,
            },
          },
          "type": "text.plain",
          "value": "console.log('world')",
        },
      ],
      "parent": [Circular],
      "position": Object {
        "end": Object {
          "column": 1,
          "line": 3,
          "offset": 42,
        },
        "start": Object {
          "column": 1,
          "line": 1,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 1,
      "line": 3,
      "offset": 42,
    },
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "properties": Object {},
  "type": "document",
}
`;

exports[`should handle broken blocks (missing end) 1`] = `
Object {
  "children": Array [
    Object {
      "attributes": Object {},
      "children": Array [
        Object {
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 21,
              "line": 2,
              "offset": 43,
            },
            "start": Object {
              "column": 1,
              "line": 2,
              "offset": 23,
            },
          },
          "type": "text.plain",
          "value": "console.log('hello')",
        },
        Object {
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 1,
              "line": 3,
              "offset": 44,
            },
            "start": Object {
              "column": 21,
              "line": 2,
              "offset": 43,
            },
          },
          "type": "text.plain",
          "value": " ",
        },
        Object {
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 21,
              "line": 3,
              "offset": 64,
            },
            "start": Object {
              "column": 1,
              "line": 3,
              "offset": 44,
            },
          },
          "type": "text.plain",
          "value": "console.log('world')",
        },
      ],
      "parent": [Circular],
      "position": Object {
        "end": Object {
          "column": 21,
          "line": 3,
          "offset": 64,
        },
        "start": Object {
          "column": 1,
          "line": 2,
          "offset": 23,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 21,
      "line": 3,
      "offset": 64,
    },
    "start": Object {
      "column": 1,
      "line": 2,
      "offset": 23,
    },
  },
  "properties": Object {},
  "type": "document",
}
`;

exports[`should parse normal block 1`] = `
Object {
  "children": Array [
    Object {
      "attributes": Object {},
      "name": "SRC",
      "params": Array [
        "javascript",
      ],
      "parent": [Circular],
      "position": Object {
        "end": Object {
          "column": 10,
          "line": 4,
          "offset": 74,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "block",
      "value": "
console.log('hello')
console.log('world')",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 10,
      "line": 4,
      "offset": 74,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "properties": Object {},
  "type": "document",
}
`;
